# friday

./: .env  .gitignore  PyWhatKit_DB.txt  README.md  TODO.md  agent.py  app.py  chainlit.md  chainlit.py  main.py  pyproject.toml  requirements.txt  utils.py
cli/: __main__.py
